--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -148,6 +148,24 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+              <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.15.0
+                </version> <!-- Last version fully compatible with Java 8 -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                        <phase>validate</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <skipJsonFormatting>false</skipJsonFormatting>
+                    <skipXmlFormatting>false</skipXmlFormatting>
+                </configuration>
             </plugin>
         </plugins>
     </build>
